[package]
name = "V2v"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.4"
blake2 = "0.10.6"
pairing = "0.14.0"
bellman = "0.14.0"
byteorder = "1.1.0"
bit-vec = "0.6"
sha2 = "0.9"
aes-gcm-siv = "0.9"
itertools = "0.10"
rand_xorshift = "0.1"